--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"react-navigation": "^1.0.0-beta.13",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
+		"redux-persist": "^5.3.5",
+		"redux-thunk": "^2.2.0",
 		"tcomb-form-native": "^0.6.10"
 	},
 	"devDependencies": {
